@@ -4,8 +4,14 @@ remctl 2.16 (unreleased)
 
     remctld now includes support for a PCRE (Perl-compatible regular
     expressions) ACL type if the PCRE library is found at configure time.
-    A PCRE ACL matches any user whose identity matches the given regular
-    expression.  Based on work contributed by Anton Lundin.
+    A PCRE ACL matches any user whose identity matches the given
+    Perl-compatible regular expression.  Based on work contributed by
+    Anton Lundin.
+
+    remctld now includes support for a POSIX regex ACL type if the system
+    supports the POSIX regex API.  A regex ACL matches any user whose
+    identity matches the given POSIX extended regular expression.  Based
+    on work contributed by Anton Lundin.
 
     remctld now sets the environment variable REMCTL_COMMAND to the
     command (not subcommand or arguments) that causes a program to be
